# kalman-filter

./: .gitlab-ci.yml  CMakeLists.txt  README.html  README.md
include/: ekf.hpp  kf.hpp  model.hpp
include/kf/: kf.hpp  model.hpp
src/: ekf.cpp  ekf_test.cpp  kf.cpp  kf_test.cpp  model.cpp
tests/: ekf_test.cpp  kf_test.cpp
